# IntNetwork

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  reset_dev_db.py
backend/app/: config.py  database.py  db_migrate.py  main.py  utils.py
backend/app/content/: an_aap_ueberblick.py  an_controller.py  an_fakten_bedingungen.py  an_grundlagen.py  an_idempotenz.py  an_inventare.py  an_module_collections.py  an_netzwerk.py  an_playbooks.py  an_qualitaet.py  an_rollen.py  an_schleifen_handler.py  an_templates.py  an_variablen.py  an_vault.py  arp.py  cc_agentic_coding.py  cc_capstone.py  cc_ci_cd.py  cc_claude_md.py  cc_cli_workflows.py  cc_effective_workflows.py  cc_hooks.py  (+82 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_auth.py  test_certificate.py  test_comments.py  test_content.py  test_content_seed.py  test_course_delete.py  test_courses_join.py  test_db_migrate.py  test_db_sync.py  test_editor_comment_remap.py  test_features.py  test_grading.py  test_health.py  test_lab.py  test_lab_migration.py  test_links.py  test_module_activation.py  test_modules_quiz.py  test_participant_token_version.py  test_passkey.py  test_presence.py  test_ratelimit.py  test_tool_lab_migration.py  test_trainer_accounts.py  test_trainer_audit.py  test_trainer_comments.py  test_trainer_comments_validation.py  test_trainer_content.py  test_trainer_modules.py  test_trainer_token_version.py  test_widget_ids_in_sync.py  test_workshops.py
(+334 files in other folders)
